# TinyDump

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/dumper/: dexdumper.rs  mod.rs  sodumper.rs  sofixer.rs
src/utils/: mod.rs  process.rs  types.rs
