[package]
name = "tinydump"
version = "0.1.0"
edition = "2021"
authors = ["mrack <mrack@qq.com>"]
description = "Android native SO and DEX dumper"
license = "MIT"
repository = "https://github.com/mrack/tinydump"
keywords = ["android", "dumper", "reverse-engineering", "memory", "sofixer"]
categories = ["system", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
byteorder = "1.4"
goblin = "0.8"
nix = "0.26"
proc-maps = "0.2"
regex = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true


# Android build configurations
[target.aarch64-linux-android]
rustflags = [
    "-C", "link-arg=-Wl,--as-needed",
    "-C", "link-arg=-Wl,--strip-all",
]
